# sigma_nova_dm

./: .gitignore  README.md  pyproject.toml
configs/: shu_config_eegconv.yaml  shu_config_template.yaml
notebooks/: reproducibility.ipynb
scripts/: download_shu_data.sh  explore_shu_cbramod.py  explore_shu_eegconv.py  stability_check_shu.py  unzip_file.py
sigma_nova_dm/: __init__.py
sigma_nova_dm/data/: shu_dataset.py  shu_loaders.py
sigma_nova_dm/evaluation/: eval_shu.py
sigma_nova_dm/models/: cbramod.py  criss_cross_transformer.py  eegsimpleconv.py  model_for_shu.py
