[project]
name = "sigma-nova-dm"
version = "0.1.0"
requires-python = "==3.11.7"
dependencies = [
    "einops>=0.8.2",
    "lmdb>=2.2.1",
    "matplotlib>=3.11.0",
    "mne>=1.12.1",
    "omegaconf>=2.3.1",
    "pandas>=3.0.3",
    "ptflops>=0.7.5",
    "pyedflib>=0.1.42",
    "pyzipper>=0.4.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "torchaudio>=2.11.0",
    "tqdm>=4.68.3",
    "wandb>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sigma_nova_dm"]
exclude = []
namespaces = false
